--- a/skeleton/spine.jade
+++ b/skeleton/spine.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title Dashboard
+    title TAMUHack Directory by Help.com
     link(rel='stylesheet', href='/skin/dermis/normalize.css')
     link(rel='stylesheet', href='/skin/dermis/foundation.css')
     link(rel='stylesheet', href='/skin/dermis/epidermis.css')
