Fixed personal site url.

--- a/skeleton/spine.jade
+++ b/skeleton/spine.jade
@@ -31,7 +31,7 @@ html(lang='en')
                     | &nbsp;-&nbsp;
                     a(href='http://twitter.com/'+member.twitter, target='_blank') Twitter
                     | &nbsp;|&nbsp;
-                    a(href=member.site, target='_blank') Site
+                    a(href=member.siteUrl, target='_blank') Site
             p=project.description
     section#submission
       h1 Submit a Project
