Added help.com floater.

--- a/skeleton/spine.jade
+++ b/skeleton/spine.jade
@@ -6,6 +6,9 @@ html(lang='en')
     link(rel='stylesheet', href='/skin/dermis/foundation.css')
     link(rel='stylesheet', href='/skin/dermis/epidermis.css')
   body
+    #floater
+      a(href='http://help.com')
+        img(src='http://help.com/skin/images/nav-logo-dark.svg')
     section#welcome
       #tamuhack-logo
         img(src='/skin/images/tamuhack_logo.png')
