--- a/skin/epidermis.sass
+++ b/skin/epidermis.sass
@@ -3,6 +3,13 @@ section
   display: none
   text-align: center
 
+#floater
+  img
+    height: 3em
+  position: fixed
+  top: 1em
+  right: 1em
+
 #welcome
   .columns
     text-align: left
